--- a/picnic-items-detail.html
+++ b/picnic-items-detail.html
@@ -14,7 +14,7 @@
   <div class="nav-bar">
     <nav class="navigation">
       <ul class="menu">
-        <a href="index.html"> <img class="logo"src="sunday-afternoon-pic/nav/logo1.png"  alt=""></a>
+        <a href=""> <img class="logo"src="sunday-afternoon-pic/nav/logo1.png"  alt=""></a>
         <li><a href="picinc.html">Picnic</a></li>
         <li><a href="News.html">News</a></li>
         <li><a href="picinc.html">Menu</a></li>
@@ -30,7 +30,6 @@
     <div class="line"></div>
   </div>
  <div class="container">
-   <p class="breadcrumb">Home > Picnic > Picnic Basket > Tulip Basket</p>
    <div class="container-content">
      <img src="sunday-afternoon-pic/picnic-detail/picnic-basket-large.jpg" alt="">
      <div class="container-txt">
