--- a/pic-items.html
+++ b/pic-items.html
@@ -16,12 +16,12 @@
   <div class="nav-bar">
     <nav class="navigation">
       <ul class="menu">
-        <a href=""> <img class="logo"src="sunday afternoon pic/nav/logo1.png"  alt=""></a>
-        <li><a href="">Picnic</a></li>
-        <li><a href="">News</a></li>
-        <li><a href="">Menu</a></li>
-        <li><a href="">Reservation</a></li>
-        <li><a href="">About us</a></li>
+        <a href=""> <img class="logo"src="sunday-afternoon-pic/nav/logo1.png"  alt=""></a>
+        <li><a href="picinc.html">Picnic</a></li>
+        <li><a href="News.html">News</a></li>
+        <li><a href="picinc.html">Menu</a></li>
+        <li><a href="reservation.html">Reservation</a></li>
+        <li><a href="about-us.html">About us</a></li>
       </ul>
       <ul class="nav-icon">
         <li><i class="fa fa-search" aria-hidden="true"></i></li>
@@ -30,6 +30,7 @@
       </ul>
     </nav>
     <div class="line"></div>
+  </div>
   </div>
   <div class="container">
     <h1>Picnic Baskets </h1>
